ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projet-ingress
  namespace: projet
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # or true permet la redirection ou non vers le https
spec:
  rules:
  - host: 
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
